tests/fsharp/typecheck/sigs/neg32.bsl

neg32.fs(17,21,17,49): typecheck error FS0842: This attribute is not valid for use on this language element

neg32.fs(24,15,24,16): typecheck error FS0043: The member or object constructor 'TryParse' does not take 1 argument(s). An overload was found taking 2 arguments.

neg32.fs(43,17,43,19): typecheck error FS0039: The type parameter 'T is not defined.

neg32.fs(44,4,44,23): typecheck error FS0671: A property cannot have explicit type parameters. Consider using a method instead.

neg32.fs(44,21,44,23): typecheck error FS0039: The type parameter 'U is not defined.

neg32.fs(45,21,45,23): typecheck error FS0039: The type parameter 'U is not defined.

neg32.fs(45,27,45,29): typecheck error FS0039: The type parameter 'U is not defined.

neg32.fs(46,18,46,20): typecheck error FS0039: The type parameter 'U is not defined.

neg32.fs(46,24,46,26): typecheck error FS0039: The type parameter 'U is not defined.

neg32.fs(50,17,50,19): typecheck error FS0039: The type parameter 'T is not defined.

neg32.fs(51,4,51,23): typecheck error FS0671: A property cannot have explicit type parameters. Consider using a method instead.

neg32.fs(51,21,51,23): typecheck error FS0039: The type parameter 'U is not defined.

neg32.fs(52,21,52,23): typecheck error FS0039: The type parameter 'U is not defined.

neg32.fs(52,27,52,29): typecheck error FS0039: The type parameter 'U is not defined.

neg32.fs(53,18,53,20): typecheck error FS0039: The type parameter 'U is not defined.

neg32.fs(53,24,53,26): typecheck error FS0039: The type parameter 'U is not defined.

neg32.fs(54,18,54,20): typecheck error FS0039: The type parameter 'T is not defined.

neg32.fs(55,18,55,20): typecheck error FS0039: The type parameter 'T is not defined.

neg32.fs(56,18,56,20): typecheck error FS0039: The type parameter 'T is not defined.

neg32.fs(59,10,59,12): typecheck error FS0039: The type parameter 'T is not defined.

neg32.fs(59,10,59,12): typecheck error FS0039: The type parameter 'T is not defined.

neg32.fs(62,11,62,13): typecheck error FS0039: The type parameter 'T is not defined.

neg32.fs(62,11,62,13): typecheck error FS0039: The type parameter 'T is not defined.

neg32.fs(66,65,66,86): typecheck error FS0033: The non-generic type 'System.EventArgs' does not expect any type arguments, but here is given 1 type argument(s)

neg32.fs(66,21,66,27): typecheck error FS1091: The event 'Event1' has a non-standard type. If this event is declared in another CLI language, you may need to access this event using the explicit add_Event1 and remove_Event1 methods for the event. If this event is declared in F#, make the type of the event an instantiation of either 'IDelegateEvent<_>' or 'IEvent<_,_>'.
